--- a/split_cash/pubspec.yaml
+++ b/split_cash/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
-  equatable:
+  equatable: ^2.0.5
+
 
 dev_dependencies:
   flutter_test:
